apps/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
spec:
    replicas: 1
    selector:
        matchLabels:
            app: db
    template:
        metadata:
            labels:
                app: db
        spec:
            containers:
                - name: db
                  image: postgres:16.2
                  volumeMounts:
                      - name: postgres-data
                        mountPath: /var/lib/postgresql/data
                  ports:
                      - containerPort: 5432
                  resources:
                      limits:
                          cpu: '1'
                          memory: '1Gi'
                      requests:
                          cpu: '100m'
                          memory: '256Mi'
            volumes:
                - name: postgres-data
                  persistentVolumeClaim:
                      claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
    name: db
spec:
    selector:
        app: db
    ports:
        - protocol: TCP
          port: 5432
