apps/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                - name: redis
                  image: redis:7.2.4
                  command:
                      - 'bash'
                      - '-c'
                      - 'docker-entrypoint.sh --appendonly no --requirepass "$REDIS_PASSWORD"'
                  resources:
                      limits:
                          cpu: '0.5'
                          memory: '512Mi'
                      requests:
                          cpu: '0.1'
                          memory: '256Mi'
                  ports:
                      - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
    name: redis
spec:
    selector:
        app: redis
    ports:
        - protocol: TCP
          port: 6379
