apps/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server
spec:
    replicas: 1
    selector:
        matchLabels:
            app: server
    template:
        metadata:
            labels:
                app: server
        spec:
            containers:
                - name: server
                  image: judge0/judge0:1.13.1
                  volumeMounts:
                      - name: config-volume
                        mountPath: /judge0.conf
                        subPath: judge0.conf
                  resources:
                      limits:
                          cpu: '1'
                          memory: '1Gi'
                  ports:
                      - containerPort: 2358
            volumes:
                - name: config-volume
                  configMap:
                      name: judge0-config

---
apiVersion: v1
kind: Service
metadata:
    name: server
spec:
    type: NodePort
    selector:
        app: server
    ports:
        - protocol: TCP
          port: 80
          targetPort: 2358
          nodePort: 30080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: server-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: localhost
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: server
                            port:
                                number: 80
